--- a/Makefile.win
+++ b/Makefile.win
@@ -4,8 +4,8 @@
 CPP      = g++.exe
 CC       = gcc.exe
 WINDRES  = windres.exe
-OBJ      = 1.o
-LINKOBJ  = 1.o
+OBJ      = 1.o keyword.o
+LINKOBJ  = 1.o keyword.o
 LIBS     = -L"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/lib" -L"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/x86_64-w64-mingw32/lib" -static-libgcc
 INCS     = -I"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/include" -I"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include"
 CXXINCS  = -I"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/include" -I"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/x86_64-w64-mingw32/include" -I"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include" -I"C:/Users/이정연/Documents/KakaoTalk/Dev-Cpp/MinGW64/lib/gcc/x86_64-w64-mingw32/4.9.2/include/c++"
@@ -26,3 +26,6 @@ $(BIN): $(OBJ)
 
 1.o: 1.c
 	$(CC) -c 1.c -o 1.o $(CFLAGS)
+
+keyword.o: keyword.c
+	$(CC) -c keyword.c -o keyword.o $(CFLAGS)
